--- a/obesity.html
+++ b/obesity.html
@@ -10,7 +10,7 @@
 <body>
     <div class="heading">
         <div class="logo">
-          <img src="images/kids.png" alt="Logo">
+          <img src="kids.png" alt="Logo">
         </div>
         <div class="header">
         <h2>
@@ -21,14 +21,14 @@
     </div>
     <div class="first">
         <div class="div1">
-            <img src="images/three.png" alt="">
+            <img src="<a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>" alt="">
             <h1>1 IN 3</h1>
             children and adolescents(ages 2-19)<br>
             <h2>ARE OVERWEIGHT<br>OR OBESE</h2>and almost <b>NONE</b> meet recommended healthy diet and physical activity amount.
         </div>
         <div class="div2">
             An estimated<br>
-            <img src="images/healthy-food.png" alt=""><br>
+            <img src="healthy-food.png" alt=""><br>
             <h1>12.5<br> MILLION</h1><br>
             children (ages 5 years or younger),spend<br>
             <h5>32 HOURS/WEEK</h5>in <u><b>child care settings</b></u> and
@@ -41,9 +41,9 @@
             TO MORE CHRONIC <br>
             CONDITIONS THAN:</h2></div>
             <div class="spic">
-                 <img src="images/smoking.png" alt=""><br><br><br><br>Smoking
-                 <img src="images/poverty.png" alt=""><br><br><br><br> Poverty
-                 <img src="images/no-drink.png" alt=""><br><br><br><br>Drinking
+                 <img src="smoking.png" alt=""><br><br><br><br>Smoking
+                 <img src="poverty.png" alt=""><br><br><br><br> Poverty
+                 <img src="no-drink.png" alt=""><br><br><br><br>Drinking
             </div>
         <p> increasing the risk of more than <b>20 preventable diseases,</b>
         including sleep apnea,asthma,heart disease,Type 2 diabetes,osteoarthritis,high blood
@@ -52,7 +52,7 @@
     <div class="third">
         <div class="risk">
         <h2>RISK FACTORS</h2>
-        <img src="images/high-risk-alert.png" alt="">
+        <img src="high-risk-alert.png" alt="">
         </div>
      <div class="para">
         <div class="lhs">
@@ -77,11 +77,11 @@
              are the most common  vegetable <br> that children eat 
              comprising<br>
             <h2>25%</h2><br>of their vegetable intake . <br>
-            <img src="images/french-fries.png" alt="">
+            <img src="french-fries.png" alt="">
         </div>
         <div class="juice">
             
-            <img src="images/cocktail.png" alt=""><br>
+            <img src="cocktail.png" alt=""><br>
             <h1>JUICE</h1><br>
            (which may lack important fibre found in whole fruit)makes up<br>
             <h1>40%</h1><br>  of children's daily fruit intake.
@@ -90,16 +90,16 @@
     <div class="five">
         <h1>40% - 50% OF  <br> TODDLERS </h1><br>
         <p> watch <u><b>more </b></u> television than is recommended.</p>
-         <img src="images/smart-tv.png" alt="">
+         <img src="smart-tv.png" alt="">
     </div>
     <div class="six">
         <h1>NEARLY 1/2  OF  <br> PRESCHOOLERS </h1><br>
         <p> don't get enough <u><b> physical activity </b></u>.</p>
-        <img src="images/cycling.png" alt="">
+        <img src="cycling.png" alt="">
     </div>
     <div class="seven">
         <div class="cost">
-            <img src="images/ppc.png" alt="">
+            <img src="ppc.png" alt="">
              <br>
              <p>The <u><b>cost</b></u> of obesity in the <br>
              United States is staggering totaling about</p><br>
